# cell-simulation-rs

./: Cargo.toml  README.md  flake.nix
saves/: .gitignore
src/: bot.rs  color.rs  config.rs  gene.rs  lib.rs  main.rs  map.rs  renderer.rs  runner.rs  simulation.rs
src/simulation/: bot.rs  color.rs  config.rs  direction.rs  gene.rs  map.rs  mod.rs
