[package]
name = "cell-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
egui_sdl2_platform = "0.2.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
sdl2 = "0.35.2"
