[package]
name = "cell-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
egui-macroquad = "0.15.0"
macroquad = "0.3"
mimalloc = "0.1.38"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
